# atwork

./: LICENCE  README.rst  atwork.desktop  pyproject.toml
atwork/: __main__.py
docs/: README.md  index.html
